assets/doc.css
/*
 * Body resets
 *
 * Update the foundational and global aspects of the page.
 */

* {
  -webkit-box-sizing: border-box;
  -moz-box-sizing: border-box;
  box-sizing: border-box;
}

html, body {
  margin: 0;
  padding: 0;
}

html {
  font-family: Lora, serif;
  font-size: 18px;
  line-height: 1.5;
}

@media (min-width: 56rem) {
  html {
    font-size: 18px;
  }
}

body {
  color: #111;
  background-color: #fcfcf8;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
}

/*
 * Global resets
 *
 * Update the foundational and global aspects of the page.
 */

/* No `:visited` state is required by default (browsers will use `a`) */
a {
  color: #111;
  text-decoration: underline;
}

a strong {
  color: inherit;
}

/* `:focus` is linked to `:hover` for basic accessibility */
a:hover, a:focus {
  color: #268bd2;
  text-decoration: underline;
}

/* Headings */
h1, h2, h3, h4, h5, h6 {
  margin-bottom: .5rem;
  font-weight: bold;
  line-height: 1.25;
  text-rendering: optimizeLegibility;
}

h1 {
  font-size: 2rem;
}

h2 {
  margin-top: 1rem;
  font-size: 1.5rem;
}

h3 {
  margin-top: 1.5rem;
  font-size: 1.25rem;
}

h4, h5, h6 {
  margin-top: 1rem;
  font-size: 1rem;
}

/* Body text */
p {
  margin-top: 0;
  margin-bottom: 1rem;
}

strong {
  color: #303030;
}

/* Lists */
ul, ol, dl {
  margin-top: 1rem;
  margin-bottom: 1rem;
  list-style-type: disc;
}

li ul, li ol, li dl {
  margin: 0 0 0 0;  
}

dt {
  font-weight: bold;
}

dd {
  margin-bottom: .5rem;
}

/* Misc */
hr {
  position: relative;
  margin: 1.5rem 0;
  border: 0;
  border-top: 1px solid #eee;
  border-bottom: 1px solid #fff;
}

abbr {
  font-size: 90%;
  font-weight: bold;
  color: #555;
  text-transform: uppercase;
}

abbr[title] {
  cursor: help;
  border-bottom: 1px dotted #e5e5e5;
}

/* Code */
code, pre {
  font-family: Menlo, Monaco, "Courier New", monospace;
}

code {
  font-size: 90%;
}

pre {
  display: block;
  margin-top: 0;
  margin-bottom: 1rem;
  padding: 1rem;
  font-size: .8rem;
  line-height: 1.4;
  white-space: pre;
  white-space: pre-wrap;
  word-break: break-all;
  word-wrap: break-word;
  background-color: #f4f4f0;
}

pre code {
  padding: 0;
  font-size: 100%;
  color: inherit;
  background-color: transparent;
}

/* Pygments via Jekyll */
.highlight {
  margin-bottom: 1rem;
  border-radius: 4px;
}

.highlight pre {
  margin-bottom: 0;
}

/* Quotes */
blockquote {
  padding: .5rem 1rem;
  margin: .8rem 0;
  color: #556;
  border-left: .25rem solid #ccb;
}

@media (min-width: 56rem) {
  blockquote {
    padding-right: 5rem;
    padding-left: 1.25rem;
  }
}

blockquote p:last-child {
  margin-bottom: 0;
}

img {
  display: block;
  max-width: 100%;
  margin: 0 0 1rem;
  border-radius: 5px;
}

/* Tables */
table {
  margin-bottom: 1rem;
  width: 100%;
  border-collapse: collapse;
}

td, th {
  padding: .25rem .5rem;
}

tbody tr:nth-child(odd) td, tbody tr:nth-child(odd) th {
  background-color: #f4f4f0;
}

/* Custom type */
.small {
  font-size: 70%;
  font-weight: 300;
}

/* Container */
.container {
  max-width: 56rem;
  padding-left: 1rem;
  padding-right: 1rem;
  margin-left: auto;
  margin-right: auto;
}

.content {
  padding-top: 0;
  padding-bottom: 2rem;
}

@media (min-width: 56rem) {
  .content {
    max-width: 38rem;
    margin-left: 18rem;
    margin-right: 2rem;
    padding-top: 2rem;
    padding-bottom: 2rem;
  }
}

/* Pages */
.page {
  margin-bottom: 4em;
}

/* Page title */
.page-title {
  margin-top: 0;
}

/* Sidebar */
.sidebar {
  text-align: left;
  padding: 2rem 1rem 0 0;
}

@media (min-width: 56rem) {
  .sidebar {
    float: left;
    top: 0;
    left: 0;
    bottom: 0;
    width: 18rem;
    padding: 2rem 1rem;
  }
}

.sidebar a {
  color: #111;
  text-decoration: none;
}

.sidebar ul, ol, dl {
  margin: 0 0 0 0;
  padding: 0 0 0 1rem;
}

.sidebar-about h1 {
  margin-top: 0;
  font-family: Lora, serif;
  font-size: 3.25rem;
}

.sidebar-nav {
  margin-bottom: 1rem;
}

.sidebar-nav-item {
  display: block;
}

.sidebar a:hover, .sidebar a:focus {
  text-decoration: underline;
}

.sidebar-nav-item.active {
  font-weight: bold;
}

/* Table of contents */
#markdown-toc li a {
  text-decoration: none;
}

